--- a/package.json
+++ b/package.json
@@ -86,7 +86,9 @@
 	"dependencies": {
 		"@types/react-dom": "^17.0.2",
 		"electron-squirrel-startup": "^1.0.0",
+		"knex": "^0.95.2",
 		"react": "^17.0.1",
-		"react-dom": "^17.0.1"
+		"react-dom": "^17.0.1",
+		"sqlite3": "^5.0.2"
 	}
 }
