--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"make": "electron-forge make",
 		"publish": "electron-forge publish",
 		"lint": "eslint --ext .ts .",
-		"postinstall": "electron-rebuild"
+		"postinstall": "electron-rebuild ."
 	},
 	"keywords": [],
 	"author": {
@@ -69,12 +69,13 @@
 		"@electron-forge/maker-rpm": "^6.0.0-beta.54",
 		"@electron-forge/maker-squirrel": "^6.0.0-beta.54",
 		"@electron-forge/maker-zip": "^6.0.0-beta.54",
-		"@electron-forge/plugin-webpack": "6.0.0-beta.54",
+		"@electron-forge/plugin-webpack": "^6.0.0-beta.54",
 		"@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
 		"@typescript-eslint/eslint-plugin": "^4.0.1",
 		"@typescript-eslint/parser": "^4.0.1",
 		"css-loader": "^4.2.1",
 		"electron": "12.0.1",
+		"electron-rebuild": "^2.3.5",
 		"eslint": "^7.6.0",
 		"eslint-plugin-import": "^2.20.0",
 		"fork-ts-checker-webpack-plugin": "^5.0.14",
